--- a/JavaOperator/bin/.gitignore
+++ b/JavaOperator/bin/.gitignore
@@ -1,5 +1,8 @@
-/controller/
-/whileLoop/
-/Loop/
-/condition/
-/loop/
+/cast/
+/constant/
+/datatype/
+/escape/
+/hello/
+/operator/
+/variable/
+/array/
